# DM-Bot-server

./: .gitignore  LICENSE.md  README.md  build master main.bat  build master updater.bat  build master.bat  changelog.yml  create_zip.py  logger_manager.py  main.py  main_menu.ui  pack.py  pyproject.toml  requarement.txt  requirements.txt  rm __pycache__.bat  rm garbage.bat  start-debug.bat  start-release.bat  start.bat  updater_config.json
.github/: PULL_REQUEST_TEMPLATE.md  assignee.config.yml  changelog.yml  generate_changelog.py  labeler.config.yml  labeler.yml
1/: smooth_console_output.py
Add in future/: discord_color.py  graphic.py  sqllite.txt  test.py
Code/: global_objects.py  main.py  main_impt.py  misc.py  root_path.py
Code.DM-Bot/: body.py  bot.py  effect.py  main.py  main_vars.py  mind.py  race.py  race_data.py
Content/: changelog.yml  updater_config.json
DM-Bot/: main.py
DevTool/: changelog.yml  main_dev.py
Docs/: index.html  main.html  styles.css
Docs.DM-Bot/: auto_docs.md  body_medical.md  effect.md  file_work.md  logger.md  main.md  mind.md  need.md  observer.md  organ.md  tag.md
Libriary_Of_Ruina/: Buffs.md  Organ_diases.md
Libriary_Of_Ruina - DB/: Buffs.md  Diseases.md  Limbs.md  Main.md  Organ.md  Organ_diases.md
Prototype/: class_mappings.yml  factory_mappings.yml  proto_tutor.yml
Prototype.DM-Bot/: class_mappings.yml
Tests/: AsyncDB_test.py  PrototypeFactory.py  Updater.py  ValidateSprite.py  __init__.py  test_AsyncDB.py  test_SettingsManager  test_SettingsManager.py  test_ValidateSprite.py
Tests.DM-Bot/: AsyncDB_test.py
(+491 files in other folders)
