[[source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[dev-packages]
isort = "*"

[packages]
aiofiles = "*"
colorlog = "*"
discord.py = "*"
flask = "*"
flask-socketio = "*"
imageio = "*"
nuitka = "*"
pyzipper = "*"
pyyaml = "*"
requests = "*"

[project]
name = "dm_bot"
authors = [
  { name = "Verggrey" },
  { name = "themanyfaceddemon" }
]

[requires]
python_version = "3.11"
